# OptLevAnalysis

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  update.sh
.github/workflows/: python-app.yml
calibrations/: TF.h5  config.yaml
lib/: backgrounds.py  data_processing.py  funcs.py  plotting.py  signals.py  stats.py  synthetic_data.py
notebooks/: example.ipynb
scripts/: diagonalized_tf.py  make_figures.py  make_limit_plots.py  optlevstyle.mplstyle  process_dataset.py  process_in_chunks.py  process_previous_measurements.py  real_time_plots.py
src/optlevanalysis/: backgrounds.py  data_processing.py  funcs.py  optlevstyle.mplstyle  plotting.py  ref_index.py  signals.py  stats.py  synthetic_data.py
