[project]
name = "optlevanalysis"
description = "Analysis code for the Stanford optical levitation lab."
dynamic = ["version","dependencies"]
requires-python = ">=3.7,<3.12"

[build-system]
requires = ["setuptools >= 61.0.0","setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
